--- a/less/elements/link.less
+++ b/less/elements/link.less
@@ -13,5 +13,9 @@
       border-bottom: 1px solid fade(@orange, 0%);
     }
   }
+  &--active {
+    color: @orange !important;
+    border: none;
+  }
 }
 
