--- a/less/pages/index/index-intro.less
+++ b/less/pages/index/index-intro.less
@@ -33,14 +33,12 @@
     height: auto;
     &::before {
       position: absolute;
-      top: 30%;
+      top: 32%;
       left: 8%;
-      width: 11px;
-      height: 11px;
+      width: 15px;
+      height: 15px;
       content: '';
-      border: 1px solid @orange;
-      border-radius: 100%;
-      background-color: transparent;
+      background: url(../img/svg/search-icon.svg) no-repeat;
     }
   }
 }
@@ -113,11 +111,11 @@
   .index-intro__actions-input {
     width: 200px;
     height: 40px;
-    padding-left: 30px;
+    padding-left: 20px;
     &::-webkit-input-placeholder {
       font-size: 15px;
       padding-bottom: 0;
-      padding-left: 30px;
+      padding-left: 15px;
     }
     &::-moz-placeholder {
       font-size: 15px;
