--- a/less/style.less
+++ b/less/style.less
@@ -11,6 +11,8 @@
 @import "layout/page-footer";
 @import "layout/container";
 @import "layout/items";
+@import "layout/filters-benefits";
+@import "layout/modal-filter";
 
 @import "pages/index/index-intro";
 @import "pages/index/index-advantages";
