--- a/less/elements/title.less
+++ b/less/elements/title.less
@@ -19,7 +19,7 @@
     &--h2 {
       font-size: 20px;
     }
-     &--h3 {
+    &--h3 {
       font-size: 17px;
     }
   }
@@ -33,8 +33,11 @@
     &--h2 {
       font-size: 22px;
     }
-     &--h3 {
+    &--h3 {
       font-size: 18px;
+    }
+    &--h4 {
+      font-size: 17px;
     }
   }
 }
