--- a/less/layout/page-header.less
+++ b/less/layout/page-header.less
@@ -79,10 +79,13 @@
   }
 }
 
-.page-header__menu-list-item--contacts a {
+.page-header__menu-list-item--contacts{
+  color: @white;
+ a {
   padding-bottom: 5px;
   display: inline-block;
   vertical-align: middle;
+}
 }
 
 .page-header__menu-list-item a {
