New page cart.html + fix validation errors

--- a/css/style.css
+++ b/css/style.css
@@ -94,9 +94,16 @@ a {
 .link--orange:hover {
   border-bottom: 1px solid rgba(255, 145, 63, 0);
 }
+.link--red {
+  color: #c33c3c;
+  border-bottom: 1px solid rgba(195, 60, 60, 0.3);
+}
+.link--red:hover {
+  border-bottom: 1px solid rgba(195, 60, 60, 0);
+}
 .link--active {
   color: #ff913f !important;
-  border: none;
+  border-bottom: 1px solid rgba(255, 145, 63, 0);
 }
 .btn {
   padding: 8px 25px;
@@ -168,6 +175,9 @@ a {
   right: 0;
   z-index: -1;
   background-image: linear-gradient(to bottom, #ffe59f, rgba(255, 233, 186, 0.74) 53%, rgba(255, 233, 186, 0.01));
+}
+.page-header--cart:after {
+  height: 150px;
 }
 .page-header__logo img {
   width: 40px;
@@ -454,6 +464,17 @@ a {
   width: 100%;
   text-align: center;
 }
+.container--cart-left {
+  width: 100%;
+}
+@media (min-width: 1200px) {
+  .container--cart-left {
+    width: 50% !important;
+  }
+  .container--cart-right {
+    width: 35% !important;
+  }
+}
 .items {
   position: relative;
   z-index: 50;
@@ -548,7 +569,7 @@ a {
 }
 .items__list-item-price-value--sale {
   color: #fff;
-  padding: 3px 10px;
+  padding: 3px 7px;
   border-radius: 3px;
   background-color: #ff913f;
   margin-bottom: 2px;
@@ -815,7 +836,7 @@ a {
         align-items: center;
   }
   .modal-filter__pic {
-    width: 200px;
+    width: 300px;
     object-fit: contain;
   }
   .modal-filter__info {
@@ -1399,5 +1420,209 @@ a {
   .index-contacts__map iframe {
     width: 600px;
     height: 215px;
+  }
+}
+.cart {
+  padding-top: 30px;
+  padding-bottom: 70px;
+}
+.cart__head {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  margin-bottom: 30px;
+}
+.cart__head-title-desc {
+  font-size: 15px;
+}
+.cart__head-btn {
+  font-size: 14px;
+}
+.cart__list-item {
+  position: relative;
+  margin-bottom: 5px;
+  padding: 45px 0;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-align: center;
+      align-items: center;
+}
+.cart__list-item:after {
+  content: "";
+  position: absolute;
+  min-height: 114px;
+  top: 0;
+  right: -4%;
+  left: -4%;
+  z-index: -1;
+  background: #fff2da;
+}
+.cart__list-item-link {
+  font-size: 12px;
+  font-family: "Helvetica Light", sans-serif;
+  font-weight: 300;
+}
+.cart__list-item-link--view {
+  position: absolute;
+  top: 5%;
+}
+.cart__list-item-link-box {
+  position: absolute;
+  top: 0;
+  right: -4%;
+  width: auto;
+  padding: 4px 10px 7px;
+  background: #ffe0a7;
+  overflow-x: hidden;
+}
+.cart__list-item-link-box .cart__list-item-link {
+  margin-left: 10px;
+}
+.cart__list-item-price-value {
+  font-size: 16px;
+}
+.cart__list-item-price-value--sale {
+  padding: 4px 10px;
+  border: 1px solid #ff913f;
+  border-radius: 5px;
+  margin-left: 2px;
+}
+.cart__list-item-text-desc {
+  font-size: 15px;
+  font-weight: 300;
+}
+.cart_list-item-price-multiply {
+  font-family: "Helvetica Light", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+}
+.container--cart-right {
+  width: 100%;
+}
+.cart__help {
+  padding-top: 30px;
+}
+.cart__help-list-item {
+  margin-bottom: 35px;
+}
+.cart__help-list-item-title {
+  font-size: 17px;
+  margin-bottom: 3px;
+}
+.cart__help-list-item-desc {
+  font-size: 16px;
+  line-height: 20px;
+}
+.cart__help-phone {
+  text-align: center;
+  position: relative;
+}
+.cart__help-phone:before {
+  content: "";
+  position: absolute;
+  right: -4%;
+  left: -4%;
+  min-height: 70px;
+  z-index: -1;
+  background: #fff2da;
+}
+.cart__help-phone-title {
+  padding-top: 10px;
+  font-size: 17px;
+  margin-bottom: 7px;
+}
+.cart__help-phone-text {
+  font-size: 16px;
+}
+@media (min-width: 660px) {
+  .cart__head-title-text {
+    font-size: 18px;
+  }
+  .cart__head-title-desc {
+    font-size: 16px;
+  }
+  .cart__head-btn {
+    font-size: 16px;
+    padding: 12px 20px;
+  }
+  .cart__list-item {
+    margin-bottom: 10px;
+    padding: 50px 0;
+  }
+  .cart__list-item:after {
+    min-height: 130px;
+  }
+  .cart__list-item-link {
+    font-size: 14px;
+  }
+  .cart__list-item-link-box {
+    padding: 4px 20px 7px 5px;
+  }
+  .cart__list-item-link-box .cart__list-item-link {
+    margin-left: 20px;
+  }
+  .cart__list-item-text-title {
+    font-size: 18px;
+  }
+  .cart__list-item-text-desc {
+    font-size: 17px;
+  }
+  .cart_list-item-price-multiply {
+    font-size: 17px;
+  }
+  .cart__list-item-price-value {
+    font-size: 18px;
+  }
+  .cart__help-list {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: start;
+        justify-content: flex-start;
+  }
+  .cart__help-list-item {
+    width: 40%;
+    margin-right: 50px;
+  }
+  .cart__help-phone:before {
+    min-height: 85px;
+  }
+  .cart__help-phone-title {
+    padding-top: 20px;
+  }
+}
+@media (min-width: 1200px) {
+  .cart {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+  }
+  .cart__head {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+  .cart__help-list {
+    padding-top: 40px;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    -ms-flex-pack: end;
+        justify-content: flex-end;
+  }
+  .cart__help-list-item {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .cart__help-phone {
+    margin-top: 41px;
+    padding-bottom: 20px;
+    min-height: 70px;
+    background: #fff2da;
+    width: auto;
+  }
+  .cart__help-phone:before {
+    display: none;
   }
 }
