--- a/less/layout/container.less
+++ b/less/layout/container.less
@@ -5,4 +5,18 @@
     width: 100%;
     text-align: center;
   }
+  &--cart-left {
+    width: 100%;
+  }
+}
+
+@media @desktop {
+   .container {
+  &--cart-left {
+    width: 50% !important;
+  }
+  &--cart-right {
+    width: 35% !important;
+  }
+}
 }
