--- a/less/layout/page-header.less
+++ b/less/layout/page-header.less
@@ -23,6 +23,11 @@
     background-image: -webkit-gradient(linear, left top, left bottom, from(#ffe59f), color-stop(53%, rgba(255, 233, 186, 0.74)), to(rgba(255, 233, 186, 0.01)));
     background-image: linear-gradient(to bottom, #ffe59f, rgba(255, 233, 186, 0.74) 53%, rgba(255, 233, 186, 0.01));
   }
+  &--cart {
+    &:after {
+      height: 150px;
+    }
+  }
 }
 
 .page-header__logo img {
