--- a/less/layout/modal-filter.less
+++ b/less/layout/modal-filter.less
@@ -1,6 +1,7 @@
 .modal-filter {
   position: absolute;
   display: none;
+  z-index: 100;
   width: 92%;
   right: 4%;
   left: 4%;
@@ -12,6 +13,7 @@
 }
 
 .modal-filter__bg {
+  z-index: 50;
   position: absolute;
   display: none;
   background: fade(@gray, 90%);
