--- a/less/layout/items.less
+++ b/less/layout/items.less
@@ -143,20 +143,17 @@
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    &--sale {
+      justify-content: flex-start;
+      .items__list-item:last-child {
+        display: none;
+      }
+    }
   }
-  .items__list-column-wrap {
-    width: 45%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    height: auto;
+  .items__list-item {
+    width: 290px;
+    margin-right: 15px;
+    margin-bottom: 35px;
   }
 }
 
@@ -166,37 +163,28 @@
     display: inline-block;
     margin-right: 10px;
   }
+
   .items__list {
     padding-bottom: 40px;
     justify-content: flex-start;
     &--sale {
       padding-top: 35px;
+      .items__list-item:last-child {
+        display: block;
+      }
     }
   }
-  .items__list-column-wrap {
-    width: 25%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    &--sale {
-      width: 50%;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-      flex-direction: row;
-      -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-      justify-content: space-between;
-    }
-  }
+
   .items__list-item {
+    width: 306px;
     margin-right: 25px;
     margin-bottom: 35px;
   }
+
   .items__btn--sale {
     display: none;
   }
+
   .items__title--sale sup {
     display: inline-block;
     font-size: 14px;
