--- a/less/style.less
+++ b/less/style.less
@@ -6,6 +6,7 @@
 @import "elements/link";
 @import "elements/btn";
 @import "elements/input";
+@import "elements/select";
 
 @import "layout/page-header";
 @import "layout/page-footer";
@@ -20,5 +21,6 @@
 @import "pages/index/index-contacts";
 
 @import "pages/cart/cart";
+@import "pages/payment/payment";
 
 
