--- a/less/elements/btn.less
+++ b/less/elements/btn.less
@@ -2,16 +2,15 @@
   padding: 8px 25px;
   background-color: @orange;
   color: @white;
+  font-family: @helvetica;
   border-radius: 5px;
   font-size: 17px;
   cursor: pointer;
+  border: none;
   &:hover {
     background-color: darken(@orange, 10%);
   }
-}
-
-@media @tablet {
-  .btn {
+  @media @tablet {
     padding: 15px 30px;
     font-size: 20px;
   }
