--- a/less/elements/title.less
+++ b/less/elements/title.less
@@ -9,6 +9,9 @@
   &--h3 {
     font-size: 16px;
   }
+  &--h4 {
+    font-size: 15px;
+  }
 }
 
 @media @tablet {
@@ -21,6 +24,9 @@
     }
     &--h3 {
       font-size: 17px;
+    }
+    &--h4 {
+      font-size: 16px;
     }
   }
 }
