--- a/less/layout/page-footer.less
+++ b/less/layout/page-footer.less
@@ -2,6 +2,7 @@
   position: relative;
   z-index: 10;
   height: 200px;
+  transform: translateY(99%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
